# noxen-signal-core

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml
src/noxen_signal_core/: __init__.py  schema.py
tests/: test_schema.py
