[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noxen-signal-core"
version = "0.1.0"
description = "Canonical signal schema library for NOXEN AI systems."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []
keywords = ["ai", "signals", "schema", "trading", "noxen"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://noxenagentic.com"
Repository = "https://github.com/noxenagentic/noxen-signal-core"
Issues = "https://github.com/noxenagentic/noxen-signal-core/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noxen_signal_core = ["py.typed"]
